# ScoriaPy

./: .readthedocs.yml  API.md  README.md  pyproject.toml
docs/: api.rst  conf.py
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
scripts/: check_imports.py
src/scoriapy/: __init__.py
src/scoriapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scoriapy/pl/: __init__.py  _embedding.py  _gene.py  _heatmap.py  _plot_embedding.py  _plot_utils.py
src/scoriapy/pp/: __init__.py  _io.py  _pipeline_run.py  hvg.py
src/scoriapy/tl/: __init__.py  _adata_prune.py  _adata_stats.py  _adata_subset.py  _adata_summary  _aggregate.py  _de.py  _df_anova.py  _rank_jasmine.py  _umap_resolution.py
src/scoriapy/utils/: __init__.py  _colors.py  _extract.py  _figure_registry.py  logging.py  markers.py
tests/: PLAN.md  conftest.py  test_pl_embedding.py  test_pl_heatmap.py  test_pp_hvg.py  test_tl_de_aggregate_stats.py  test_utils_extract.py  test_utils_markers_logging.py
