[project]
name = "scoriapy"
version = "0.1.0"
description = "Convenience utilities built on top of Scanpy."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Hanzhou Wang" }]

dependencies = [
    "scanpy",
    "anndata",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "jupyterlab>=4.5.0",
    "pycomplexheatmap>=1.8.3",
    "scikit-posthocs>=0.11.4",
    "pytest>=7.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme"
]

[tool.setuptools]
include-package-data = true  # optional

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
